# data-diff

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  data-check.py  docker-compose.yml  pyproject.toml  segments.json
.github/workflows/: ci.yml  ci_full.yml  formatter.yml
data_diff/: __init__.py  __main__.py  dbt.py  diff_tables.py  hashdiff_tables.py  info_tree.py  table_segment.py  thread_utils.py  tracking.py
data_diff/databases/: base.py  bigquery.py  duckdb.py  mysql.py
dev/: Dockerfile.prestosql.340  benchmark.sh  dev.env
docs/: conf.py  index.rst  new-database-driver-guide.rst  python_examples.rst
tests/: common.py  install-packages.sh  test_cli.py  test_diff_tables.py  test_duckdb.py  test_main.py  test_query.py  test_segment_range_diff.py  test_stop_at_top_level.py  waiting_for_stack_up.sh
