[project]
name = "data-diff"
version = "0.12.0"
description = "Command-line tool and Python library to efficiently diff rows across two different databases."
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = { file = "LICENSE" }
authors = [
  { name = "Datafold", email = "data-diff@datafold.com" },
  { name = "LOCALiQ Data Team", email = "dms-dba@gannett.com" },
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Topic :: Database :: Database Engines/Servers",
  "Typing :: Typed",
]
dependencies = [
  "pydantic<2.0",
  "dsnparse<0.2.0",
  "click==8.1.7",
  "rich",
  "toml>=0.10.2",
  "dbt-core>=1.0.0,<2.0.0",
  "keyring",
  "tabulate==0.9.0",
  "urllib3<2",
  "typing-extensions>=4.0.1",
  "attrs>=23.1.0",
  "mashumaro[msgpack]>=2.9,<3.11.0",
]

[project.optional-dependencies]
preql = ["preql>=0.2.19"]
mysql = ["mysql-connector-python==8.0.29"]
postgresql = ["psycopg2"]
redshift = ["psycopg2"]
snowflake = ["snowflake-connector-python>=3.0.2,<4.0.0", "cryptography"]
presto = ["presto-python-client"]
oracle = ["oracledb"]
mssql = ["pyodbc>=4.0.39"]
trino = ["trino>=0.314.0"]
clickhouse = ["clickhouse-driver"]
vertica = ["vertica-python"]
duckdb = ["duckdb"]
all-dbs = [
  "preql>=0.2.19",
  "mysql-connector-python==8.0.29",
  "psycopg2",
  "snowflake-connector-python>=3.0.2,<4.0.0",
  "cryptography",
  "presto-python-client",
  "oracledb",
  "pyodbc>=4.0.39",
  "trino>=0.314.0",
  "clickhouse-driver",
  "vertica-python",
  "duckdb",
]

[project.scripts]
data-diff = "data_diff.__main__:main"

[project.urls]
Repository = "https://github.com/GannettDigital/data-diff"

[dependency-groups]
dev = [
  "parameterized",
  "unittest-parallel",
  "ruff>=0.1.4",
  "pre-commit>=3.5.0",
]
ci = [
  "google-cloud-bigquery<3.0.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["data_diff*"]

[tool.setuptools.package-data]
data_diff = ["py.typed"]

[tool.black]
line-length = 120
